--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
   </head>
 
   <body>
-    <main></main>
+    <section id="superheroes"></section>
+
+    <template id="template">
+        <article>
+          <h1>alias</h1>
+          <p id="mission">mission</p>
+          <p id="powers">powers</p>
+          <p id="weaknesses">weaknesses</p>
+          <p id="enemies">enemies</p>
+          <p id="outfit">outfit</p>
+          <p id="cape">cape</p>
+        </article>
+    </template>
     <script src="superheroes.js"></script>
   </body>
 </html>
